<resources>

    <string name="app_name">智慧城市</string>
    <string name="header_text">The Header</string>
    <string name="footer_text">The Footer</string>

    <!-- footer -->
    <string name="list_footer_loading">正在加载中…</string>
    <string name="list_footer_network_error">点击重新加载</string>
    <string name="list_footer_end">已经到底了</string>
    <string name="tip_drag">长按编辑,拖拽排序</string>
    <string name="my_cahnnel">我的频道</string>
    <string name="other_channel">其他频道</string>
    <string name="edit">编辑</string>
    <string name="finish">完成</string>

    <string name="battery_info_status_charging">正在充电</string>
    <string name="battery_info_status_charging_ac">正在通过交流电源充电</string>
    <string name="battery_info_status_charging_usb">正在通过USB充电</string>
    <string name="battery_info_status_charging_wireless">正在进行无线充电</string>
    <string name="battery_info_status_discharging">未在充电</string>
    <string name="battery_info_status_not_charging">未在充电</string>
    <string name="battery_info_status_full">电量充足</string>
    <string name="battery_info_status_unknown">未知</string>

    <string name="juhe_yellowpages">聚合黄页</string>
    <string name="text_load">加载中…</string>
    <string name="navigation">导航</string>
    <string name="navigation_cancel">退出导航</string>
    <string name="express_search">快递查询</string>
    <string name="title_search">搜索</string>
    <string name="title_expressquery">快递详情</string>
    <string name="title_illegaldetails">违章详情</string>
    <string name="title_illegal">违章查询</string>
    <string name="title_register">挂号</string>
    <string name="title_doctor_list">医生列表</string>
    <string name="title_doctor_information">医生详情</string>
    <string name="title_doctor_register">在线预约</string>
    <string name="title_train_search">火车票</string>
    <string name="title_recharge">充话费</string>
    <string name="title_train_research">查询车次</string>
    <string name="title_train_calendar">选择出发日期</string>
    <string name="title_train_details">列车列表</string>
    <string name="title_train_message">列车详情</string>
    <string name="title_airport_research">选择飞机场</string>
    <string name="recharge">充话费</string>
    <string name="explan_recharge">查询话费信息</string>
    <string name="checkbalance">查余额</string>
    <string name="explan_checkbalance">查询话费余额</string>
    <string name="express">查快递</string>
    <string name="explan_express">查询物流信息</string>
    <string name="violation">查违章</string>
    <string name="explan_violation">查询违章信息</string>
    <string name="train">火车票</string>
    <string name="explan_train">火车票预订</string>
    <string name="hospital">挂号</string>
    <string name="explan_hospital">预约挂号</string>
    <string name="phone_express">物流快递</string>
    <string name="explan_phone_express">查快递</string>
    <string name="phone_delicacies">美食外卖</string>
    <string name="explan_phone_delicacies">附近美食</string>
    <string name="phone_aviation">航空客服</string>
    <string name="explan_phone_aviation">查航班</string>
    <string name="phone_hotel">酒店</string>
    <string name="explan_phone_hotel">酒店预订</string>
    <string name="phone_bank">银行</string>
    <string name="explan_phone_bank">附近的银行</string>
    <string name="phone_drivers">车主服务</string>
    <string name="explan_phone_drivers">实时油价</string>
    <string name="phone_finance">金融财经</string>
    <string name="explan_phone_finance">保险热线</string>
    <string name="phone_game">游戏</string>
    <string name="explan_phone_game">常用号码</string>
    <string name="phone_aftersales">品牌售后</string>
    <string name="explan_phone_aftersales">售后服务号码</string>
    <string name="phone_ecommerce">电商购物</string>
    <string name="explan_phone_ecommerce">常用号码</string>
    <string name="phone_car">汽车品牌</string>
    <string name="explan_phone_car">附近4S店</string>
    <string name="phone_hotline">公共热线</string>
    <string name="explan_phone_hotline">投诉举报</string>
    <string name="check_balance_prompt">\" 系统会向运营商发送一条免费短信 \"</string>
    <string name="cancel_text">取消</string>
    <string name="ok_text">确认</string>
    <string name="button_express_select">请选择一个快递公司</string>
    <string name="hide_express_num">请输入要查询的运单号</string>
    <string name="button_search">查询</string>
    <string name="distance_a">500m</string>
    <string name="distance_b">1km</string>
    <string name="distance_c">3km</string>
    <string name="distance_d">5km</string>
    <string name="screen">筛选</string>
    <string name="car_type">车牌类型</string>
    <string name="location">所在地区</string>
    <string name="hide_car_number">车牌号码（请输入完整7位）</string>
    <string name="hide_engine_number">发动机号（某些省份需要）</string>
    <string name="hide_class_number">车架号（某些省份需要）</string>
    <string name="choose_province">选择省份</string>
    <string name="choose_city">选择城市</string>
    <string name="city_picker">确定</string>
    <string name="choose_car_type">选择汽车类型</string>
    <string name="string_alter_body">您的车牌类型是：</string>
    <string name="string_alter_ok">确定</string>
    <string name="string_alter_cancel">取消</string>
    <string name="choose_express_company">选择快递公司</string>
    <string name="string_alter_body_express">您选择的快递公司是：</string>
    <string name="hide_recharge_number">请输入要充值的手机号码（联通，移动，电信）</string>
    <string name="hide_disease_name">请输入查询的疾病名</string>
    <string name="button_register_province">省份</string>
    <string name="button_register_city">城市</string>
    <string name="hide_identify_code">请输入验证码</string>
    <string name="button_register">预约</string>
    <string name="hide_hospital_username">请输入挂号网的用户名</string>
    <string name="hide_hospital_password">请输入挂号网的密码</string>
    <string name="hide_ill_description">请描述疾病</string>
    <string name="button_hospital_login">提交</string>
    <string name="hide_train_login_username">请输入12306账号</string>
    <string name="hide_train_login_password">请输入密码</string>
    <string name="train_login">登录</string>
    <string name="train_login_check">12306账号验证</string>
    <string name="train_pis_name">请添加12306账号内已有的乘客的姓名</string>
    <string name="train_pis_idcardnum">身份证号码</string>
    <string name="train_pis_tel">手机号码（方便接收预订短信）</string>
    <string name="train_pis_check">提交并支付</string>
    <string name="train_undone_order_check">继续支付</string>
    <string name="hide_train_station_choose">请输入火车站名</string>
    <string name="train_station_list">火车站列表</string>
    <string name="petrol_station">加油站</string>
    <string name="find_petrolstation">查询周边加油站</string>
    <string name="ps_unit_price">元/升</string>
    <string name="ps_staion_price">本地油价</string>
    <string name="ps_gast_price">省控基准油价</string>
    <string name="button_recharge">30元</string>
    <string name="choose_recharge_money">请选择充值的金额</string>
    <string name="footer_clear_history">清除所有记录</string>
    <string name="nearby_delicacies">周边美食</string>
    <string name="nearby_hotel">周边酒店</string>
    <string name="nearby_bank">周边银行</string>
    <string name="nearby_petrol_station">周边加油站</string>
    <string name="nearby_4s">周边4S店</string>
    <string name="phone_recharge">手机充值</string>
    <string name="hide_airport_research">请输入飞机场名</string>
    <string name="hide_plane_name">请输入航班号</string>
    <string name="flight_query">航班详情</string>
    <string name="flight_search">航班查询</string>
    <string name="airline_search">航线查询</string>
    <string name="flight_list">航班列表</string>
    <string name="bracket_left">(</string>
    <string name="bracket_right">)</string>
    <string name="ontime_rate">准点率:</string>
    <string name="plan">计划</string>
    <string name="fly_time">飞行时间:</string>
    <string name="minutes">分钟</string>
    <string name="plan_tofly">计划起飞</string>
    <string name="tofly">实际起飞</string>
    <string name="zj_table">值机柜台</string>
    <string name="dj">登机口</string>
    <string name="plan_arrive">计划到达</string>
    <string name="turly_arrive">实际到达</string>
    <string name="query_address">详细地址</string>
    <string name="delicacies_tel">联系方式</string>
    <string name="delicacies_label">标签</string>
    <string name="restaurant_query">周边美事详情</string>
    <string name="restaurant_avg_price">人均: %s元</string>
    <string name="restaurant_distance">距离: %s</string>
    <string name="pull_to_refresh_pull_label">下拉加载上一页</string>
    <string name="pull_to_refresh_release_label">松开加载上一页</string>
    <string name="pull_to_refresh_refreshing_label">正在载入…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">上拉加载下一页</string>
    <string name="pull_to_refresh_from_bottom_release_label">松开加载下一页</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>

</resources>