<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/ll_express"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="onUsefulClick" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    style="@style/uTextView"
                    android:drawableLeft="@mipmap/dot_express"
                    android:text="@string/phone_express" />

                <TextView
                    style="@style/suTextView"
                    android:text="@string/explan_phone_express" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="1px"
            android:layout_height="fill_parent"
            android:background="@color/divider" />

        <LinearLayout
            android:id="@+id/ll_delicacies"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="onUsefulClick" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    style="@style/uTextView"
                    android:drawableLeft="@mipmap/dot_delicacies"
                    android:text="@string/phone_delicacies" />

                <TextView
                    style="@style/suTextView"
                    android:text="@string/explan_phone_delicacies" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="1px"
            android:layout_height="fill_parent"
            android:background="@color/divider" />

        <LinearLayout
            android:id="@+id/ll_aviation"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="onUsefulClick" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    style="@style/uTextView"
                    android:drawableLeft="@mipmap/dot_aviation"
                    android:text="@string/phone_aviation" />

                <TextView
                    style="@style/suTextView"
                    android:text="@string/explan_phone_aviation" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/ll_hotel"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="onUsefulClick" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    style="@style/uTextView"
                    android:drawableLeft="@mipmap/dot_hotel"
                    android:text="@string/phone_hotel" />

                <TextView
                    style="@style/suTextView"
                    android:text="@string/explan_phone_hotel" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="1px"
            android:layout_height="fill_parent"
            android:background="@color/divider" />

        <LinearLayout
            android:id="@+id/ll_bank"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="onUsefulClick" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    style="@style/uTextView"
                    android:drawableLeft="@mipmap/dot_bank"
                    android:text="@string/phone_bank" />

                <TextView
                    style="@style/suTextView"
                    android:text="@string/explan_phone_bank" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="1px"
            android:layout_height="fill_parent"
            android:background="@color/divider" />

        <LinearLayout
            android:id="@+id/ll_drivers"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="onUsefulClick" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    style="@style/uTextView"
                    android:drawableLeft="@mipmap/dot_drivers"
                    android:text="@string/phone_drivers" />

                <TextView
                    style="@style/suTextView"
                    android:text="@string/explan_phone_drivers" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/ll_finance"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="onUsefulClick" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    style="@style/uTextView"
                    android:drawableLeft="@mipmap/dot_finance"
                    android:text="@string/phone_finance" />

                <TextView
                    style="@style/suTextView"
                    android:text="@string/explan_phone_finance" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="1px"
            android:layout_height="fill_parent"
            android:background="@color/divider" />

        <LinearLayout
             android:id="@+id/ll_game"
            android:onClick="onUsefulClick"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:gravity="center" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    style="@style/uTextView"
                    android:drawableLeft="@mipmap/dot_game"
                    android:text="@string/phone_game" />

                <TextView
                    style="@style/suTextView"
                    android:text="@string/explan_phone_game" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="1px"
            android:layout_height="fill_parent"
            android:background="@color/divider" />

        <LinearLayout
             android:id="@+id/ll_aftersales"
            android:onClick="onUsefulClick"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:gravity="center" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    style="@style/uTextView"
                    android:drawableLeft="@mipmap/dot_aftersales"
                    android:text="@string/phone_aftersales" />

                <TextView
                    style="@style/suTextView"
                    android:text="@string/explan_phone_aftersales" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
             android:id="@+id/ll_ecommerce"
            android:onClick="onUsefulClick"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:gravity="center" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    style="@style/uTextView"
                    android:drawableLeft="@mipmap/dot_ecommerce"
                    android:text="@string/phone_ecommerce" />

                <TextView
                    style="@style/suTextView"
                    android:text="@string/explan_phone_ecommerce" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="1px"
            android:layout_height="fill_parent"
            android:background="@color/divider" />

        <LinearLayout
             android:id="@+id/ll_car"
            android:onClick="onUsefulClick"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:gravity="center" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    style="@style/uTextView"
                    android:drawableLeft="@mipmap/dot_car"
                    android:text="@string/phone_car" />

                <TextView
                    style="@style/suTextView"
                    android:text="@string/explan_phone_car" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="1px"
            android:layout_height="fill_parent"
            android:background="@color/divider" />

        <LinearLayout
             android:id="@+id/ll_hotline"
            android:onClick="onUsefulClick"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:gravity="center" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    style="@style/uTextView"
                    android:drawableLeft="@mipmap/dot_hotline"
                    android:text="@string/phone_hotline" />

                <TextView
                    style="@style/suTextView"
                    android:text="@string/explan_phone_hotline" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>