<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@drawable/bg"
        android:gravity="center" >

        <RadioGroup
            android:id="@+id/rg_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <RadioButton
                android:id="@+id/rb_a"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="4.5dp"
                android:layout_marginRight="4.5dp"
                android:layout_weight="1"
                android:background="@drawable/radiobutton_bg"
                android:button="@null"
                android:gravity="center"
                android:text="@string/distance_a"
                android:textColor="@drawable/radiobutton_textcolor" />

            <RadioButton
                android:id="@+id/rb_b"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="4.5dp"
                android:layout_marginRight="4.5dp"
                android:layout_weight="1"
                android:background="@drawable/radiobutton_bg"
                android:button="@null"
                android:gravity="center"
                android:text="@string/distance_b"
                android:textColor="@drawable/radiobutton_textcolor" />

            <RadioButton
                android:id="@+id/rb_c"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="4.5dp"
                android:layout_marginRight="4.5dp"
                android:layout_weight="1"
                android:background="@drawable/radiobutton_bg"
                android:button="@null"
                android:gravity="center"
                android:text="@string/distance_c"
                android:textColor="@drawable/radiobutton_textcolor" />

            <RadioButton
                android:id="@+id/rb_d"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="4.5dp"
                android:layout_marginRight="4.5dp"
                android:layout_weight="1"
                android:background="@drawable/radiobutton_bg"
                android:button="@null"
                android:gravity="center"
                android:text="@string/distance_d"
                android:textColor="@drawable/radiobutton_textcolor" />
        </RadioGroup>
    </LinearLayout>

</LinearLayout>